# N-Tester

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  cli.py  config.py  init_db_portable.py  main.py  portable_env.py  pyproject.toml  pytest.ini  requirements  requirements-windows.txt  requirements.txt  run_portable.py  scheduler_runner.py  start.py  write_installer_config.py
backend/alembic/versions/: 001_create_project_tables.sql  002_update_project_tables_fields.sql  003_create_testcase_version_tables.sql  004_add_trace_id_to_steps.sql  005_fix_missing_base_columns.sql  006_create_api_testing_tables.sql  007_add_missing_fields.sql  008_add_request_settings_fields.sql  009_add_history_fields.sql  010_create_ssl_certificate_table.sql  011_add_pre_post_operations.sql  add_code_sequence_table.sql  add_permission_to_menu.sql
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20260117_0957_7f384f6a7b51_initial_migration.py  20260117_1003_b1c76d9cbd3b_initial_migration.py  20260117_1504_d45d346a66e1_add_department_table_and_fields.py  20260130_avatar_nullable.py  20260130_fix_avatar_field.py  20260130_fix_user_status.py  20260130_init_complete_menus.py  20260130_rbac_refactor.py  20260131_1800_create_sys_tables.py  20260408_1737_83dceeccadc0_initial_migration.py  20260409_1200_add_project_skill_table.py  20260410_2000_add_skill_execution_job_tables.py  (+7 more)
backend/app/api/: __init__.py
backend/app/common/: __init__.py  commands.py  constants.py  enums.py  rediskeys.py  response.py
backend/app/core/: __init__.py  api_permission.py  base_crud.py  base_model.py  base_schema.py  data_permission.py  dependencies.py  minio_client.py  permission.py
backend/app/corelibs/: __init__.py  codes.py  consts.py  custom_router.py  local.py  logger.py
backend/app/db/: __init__.py  redis.py  sqlalchemy.py
backend/app/exceptions/: exceptions.py
backend/app/init/: cors.py  exception.py  limiter.py  middleware.py  mount.py  routers.py
backend/app/middleware/: log_middleware.py
backend/app/models/: __init__.py  api_models.py  base.py  celery_beat_models.py  rbac_models.py
backend/app/schemas/: __init__.py  base.py  common.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py  async_converter.py  common.py  context.py  create_dir.py  current_user.py  des.py  document_extractor.py  excel_importer.py  oper_jmx.py  oper_shell.py  perf_log_collector.py  response.py  security.py  serialize.py
backend/celery_worker/: __init__.py  base.py  worker.py
backend/celery_worker/scheduler/: croniter.py
backend/celery_worker/tasks/: common.py
backend/db_script/: db_init - 副本.sql  db_init.sql  ntester.sql
backend/docs/: DEV_NOTES.md  perf_tech_solution.md  perf_user_guide.md  products.txt
backend/runner/: Dockerfile  worker.py
backend/static/swagger/: redoc.html  swagger.html
backend/tests/: conftest.py  test_health.py  test_project_management.py
(+614 files in other folders)
