[project]
name = "n-tester-backend"
version = "2.0.1"
description = "N-Tester AI 全栈测试平台 - 后端服务"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web 框架核心
    "fastapi==0.111.0",
    "uvicorn[standard]>=0.31.1",
    "gunicorn==22.0.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    # 数据库
    "SQLAlchemy==2.0.3",
    "asyncmy==0.2.7; sys_platform != 'win32'",
    "aiomysql==0.3.2",
    "PyMySQL==1.0.2",
    "alembic==1.13.1",
    # 缓存和任务队列
    "redis==5.0.4",
    "celery==5.2.7",
    # 身份认证
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.2.0",
    "cryptography==40.0.2",
    "pycryptodomex==3.23.0",
    "PyJWT==2.11.0",
    "Authlib==1.6.6",
    # HTTP 客户端
    "requests==2.32.5",
    "httpx==0.28.1",
    "aiohttp==3.13.3",
    # 文件处理
    "aiofiles==25.1.0",
    "pandas==3.0.1",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "pypdf==6.6.2",
    "minio==7.2.20",
    "paramiko==4.0.0",
    # 环境配置
    "python-dotenv==1.2.1",
    # 日志
    "loguru==0.6.0",
    # JSON 处理
    "orjson==3.11.7",
    "jsonpath-ng==1.6.1",
    # 时间处理
    "python-dateutil==2.9.0.post0",
    "croniter==6.0.0",
    # 数据处理
    "dictdiffer==0.9.0",
    "pyyaml==6.0.3",
    "xmltodict==1.0.4",
    # 图像和条码
    "pillow==12.1.0",
    "python-barcode==0.16.1",
    "qrcode==8.2",
    "pyzbar==0.1.9; sys_platform != 'win32'",
    # 数据生成
    "faker==40.5.1",
    # UI 自动化
    "selenium==4.40.0",
    "webdriver-manager==4.0.2",
    "playwright==1.40.0",
    "opencv-python==4.10.0.84",
    "Appium-Python-Client==4.2.0; sys_platform != 'win32'",
    # API 限流
    "fastapi-limiter==0.1.6",
    "slowapi==0.1.9",
    # 工具库
    "user-agents==2.2.0",
    "psutil==7.2.2",
    "typer==0.12.3",
    # 邮件
    "email-validator==2.3.0",
    # AI
    "langchain==1.2.8",
    "langchain-core==1.2.8",
    "langchain-openai==1.1.7",
    "langgraph==1.0.7",
    "openai==2.16.0",
    "anthropic==0.76.0",
    "browser-use==0.12.0",
    "langchain-mcp-adapters==0.2.2",
    # 其他
    "anyio==4.12.1",
    "async-timeout>=4.0.3",
    "certifi==2026.1.4",
    "charset-normalizer==3.0.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "greenlet==3.0.1",
    "h11==0.14.0",
    "idna==3.4",
    "MarkupSafe==2.1.2",
    "sniffio==1.3.0",
    "urllib3>=2.6.3,<3.0",
    "apscheduler",
    "python-multipart==0.0.20",
    "jmespath==1.0.1",
    # WS（Windows 开发环境常用）
    "websockets==15.0.1",
    "protobuf==6.33.6",
    "Appium-Python-Client==4.2.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]
# Windows 可选：App 自动化
mobile = [
    "Appium-Python-Client==4.2.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
extra-index-url = ["https://pypi.org/simple"]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
